--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/windows_app
-spring.datasource.username=postgres
-spring.datasource.password=!D686171a
+spring.datasource.url=jdbc:postgresql://localhost:5432/your_data_base // сюда ставите свою бд
+spring.datasource.username=postgres //  ник не трогайте
+spring.datasource.password=YourPassword // сюда свой пароль
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
